test/functional/directory/gds/ts/gdssetup/lib/valid/sv_domnodef3.cleanup
# 
# @OSF_COPYRIGHT@
# COPYRIGHT NOTICE
# Copyright (c) 1990, 1991, 1992, 1993, 1994, 1996 Open Software Foundation, Inc.
# ALL RIGHTS RESERVED (DCE).  See the file named COPYRIGHT.DCE for 
# the full copyright text.
#
# HISTORY
# $Log: sv_domnodef3.cleanup,v $
# Revision 1.1.4.2  1996/03/11  01:36:11  marty
# 	Update copyright years
# 	[1996/03/10  19:38:50  marty]
#
# Revision 1.1.4.1  1995/12/11  16:50:35  root
# 	Submit
# 	[1995/12/11  16:37:03  root]
# 
# Revision 1.1.2.2  1994/08/19  13:56:12  marrek
# 	Improve testcode coverage OT11586.
# 	[1994/08/19  11:44:01  marrek]
# 
# Revision 1.1.2.1  1994/07/15  13:30:23  marrek
# 	More gdssetup testcases.
# 	[1994/07/15  08:52:12  marrek]
# 
# $EndLog$
# 
# $RCSfile: sv_domnodef3.cleanup,v $ $Revision: 1.1.4.2 $ $Date: 1996/03/11 01:36:11 $
# 

#Delete local DSA (dsa-m3) in contact DSA (dsa-m1)
#Delete all default DSA's

gdscp -c "x500obj bind -dirid 3 -dsa /C=de/O=dbp/OU=dap11/CN=dsa/CN=dsa-m1; \
	  x500svc modify -preferadmfunctions TRUE -dontusecopy FALSE -localscope TRUE; \
	  x500obj delete /C=de/O=dbp/OU=buba/CN=dsa/CN=dsa-m3; \
	  x500obj delete /C=de/O=dbp/OU=buba/CN=dsa; \
	  x500obj delete /C=de/O=dbp/OU=buba; \
          x500obj bind -dirid 3 -cache; \
	  x500svc modify -preferadmfunctions TRUE -duacache TRUE -duafirst TRUE -usedsa FALSE -cacheclass RESIDENT -dontusecopy FALSE; \
	  x500obj delete 43.12.2.1107.1.3.4.8=DEFAULT-DSA; \
	  x500obj delete /C=de/O=dbp/OU=buba/CN=dsa/CN=dsa-m3; \
	  x500obj delete /C=de/O=dbp/OU=dap11/CN=dsa/CN=dsa-m6; \
	  x500obj delete /C=de/O=dbp/OU=dap11/CN=dsa/CN=dsa-m7; \
	  x500obj delete /C=de/O=dbp/OU=dap11/CN=dsa/CN=dsa-m8"

gdssysadm -fd -p
gdssysadm -fc -m2 -d3 -p
gdssysadm -fA -p
